# financial-dashboard

./: .env.example  .gitignore  LICENSE  README.md  VERCEL_DEPLOY.md  docker-compose.yml  start-from-zero.sh  vercel.json
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt  vercel.json
backend/demo_data/: seed_demo.py
backend/migrations/: env.py
backend/migrations/versions/: 034cff1247f1_add_portfolio_snapshots_and_upload_history.py  6b57847ed974_add_users_table_and_auth0_integration.py  d6c2d9c812eb_init.py
backend/scripts/: start.sh
backend/src/: main.py
backend/src/api/v1/: auth.py  demo_portfolio.py  health.py  import_data.py  portfolio.py  router.py  users.py
backend/src/core/: auth0.py  config.py  database.py  demo_auth.py  demo_storage.py  security.py
backend/src/models/: __init__.py  portfolio.py  snapshot.py  user.py
backend/src/schemas/: dashboard.py  gbm.py  import_data.py
backend/src/services/: analytics.py  parser.py  pdf_parser.py  snapshot_service.py
docs/: ARCHITECTURE.md  BACKEND_SETUP.md  DOCKER_GUIDE.md  FRONTEND_SETUP.md
frontend/: .dockerignore  .env.example  .env.production  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/app/: entry.client.tsx  entry.server.tsx  root.tsx  routes.ts
frontend/app/core/providers/: QueryProvider.tsx
frontend/app/core/styles/: app.css
frontend/app/routes/: callback.tsx  dashboard.portfolio.tsx  dashboard.tsx  demo.tsx  index.tsx
frontend/app/shared/api/: client.ts
(+35 files in other folders)
